# A_Backend

./: .gitignore  CMakeLists.txt  CMakePresets.json  Punal Manalan Git Commit Messages.txt  README.md  vcpkg.json
src/: main.cpp
src/Controllers/: AuthController.cpp  AuthController.hpp  PlayerController.cpp  PlayerController.hpp
src/Database/: DatabaseManager.cpp  DatabaseManager.hpp
src/Models/: PlayerData.hpp  User.hpp
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.css  App.jsx
src/frontend/src/api/: axios.js
src/frontend/src/components/: LoginUser.jsx  PlayerDetails.jsx  RegisterUser.jsx  UserList.jsx
